# fheroes2

.github/workflows/: cmake_build.yml
src/: CMakeLists.txt
src/fheroes2/: CMakeLists.txt
