if(FHEROES2_STRICT_COMPILATION)
	if (MSVC)
		# /WX fails compilation completely. Add when code will be ready
		add_compile_options(/W4)
	else()
		add_compile_options(-Wall -Wextra -pedantic -Werror)
	endif()
endif()

add_subdirectory(thirdparty)
add_subdirectory(engine)
add_subdirectory(fheroes2)
if(ENABLE_TOOLS)
	add_subdirectory(tools)
endif()
